[gd_scene load_steps=5 format=1]

[ext_resource path="res://Sprites/red_X.png" type="Texture" id=1]
[ext_resource path="res://Sprites/white_O.png" type="Texture" id=2]
[ext_resource path="res://Scripts/tray_controls.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16, 16 )

[node name="Tray" type="Node2D"]

[node name="LoseSprite" type="Sprite" parent="."]

texture = ExtResource( 1 )

[node name="WinSprite" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="body_enter" from="Area2D" to="Area2D" method="_on_Area2D_body_enter"]

[connection signal="timeout" from="Timer" to="Area2D" method="_on_Timer_timeout"]


